# buildxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.cpp
cmake/: archive.cmake  archive.patch  boost.cmake  bundle.cmake  clang_format.cmake  cli11.cmake  fmt.cmake  spdlog.cmake
include/: CMakeLists.txt
include/buildxx/: async_rc.hpp  build_ctx.hpp  buildxx.hpp  cli_ctx.hpp  entry.hpp  executable.hpp  library.hpp  option.hpp  shell.hpp  target.hpp  utils.hpp
src/: CMakeLists.txt  async_rc.cpp  build.cpp  build.hpp  build_ctx.cpp  build_ctx.hpp  build_main.cpp  buildxx.cpp  buildxx.hpp  cli.cpp  cli.hpp  cli_ctx.cpp  cmd.cpp  cmd.hpp  code.hpp  command.cpp  command.hpp  common.hpp  ctx.cpp  ctx.hpp  exe.cpp  exe.hpp  executable.cpp  executable.hpp  files.cpp  library.cpp  library.hpp  main.cpp  phony.cpp  phony.hpp  shell.cpp  shell.hpp  step.cpp  step.hpp  target.cpp  target.hpp  tc.cpp  tc.hpp  tc_unix.cpp  tc_unix.hpp  (+6 more)
src/buildxx/: buildxx.hpp  files.hpp  library.hpp  shell.hpp  target.hpp  toolchain.hpp  types.hpp  utils.hpp
test/: bar.cc  foo.cpp  main.cc  main.cpp
